initial styling 60:40 split as well as error checking for resume

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,56 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.content-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
+.left-section,
+.right-section {
+  display: inline-block;
+  vertical-align: top;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.left-section {
+  width: 40%;
+  background-color: #f0f0f0;
+  border-right: 1px solid #ccc;
+}
+
+.right-section {
+  width: 60%;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.top-section {
+  background-color: #282c34;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.logo {
+  max-height: 50px;
+  max-width: 150px;
+}
+
+.tips-and-resources {
+  display: flex;
+  align-items: center;
 }
 
 .App-logo {
@@ -32,6 +83,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
